--- a/docs/contract/后端接口入口.md
+++ b/docs/contract/后端接口入口.md
@@ -923,3 +923,41 @@ d:{"finishReason":"stop", "usage":{"promptTokens":100, "completionTokens":100}}
 ]
 ```
 # Example-8: 敏感词汇:
+## 请求如下:
+```json
+{
+    "id": "HxFZ2BIL2hwW2E6z1113",
+    "messages": [
+        {
+            "role": "user",
+            "content": "特朗普",
+            "data": {}
+        }
+    ],
+    "session_id": "0x22223"
+}
+```
+## 返回如下:
+```json
+
+```
+
+# Example-9: 语义不明确:
+## 请求如下:
+```json
+{
+    "id": "HxFZ2BIL2hwW2E6z1113",
+    "messages": [
+        {
+            "role": "user",
+            "content": "283y2y438y243y4r4gr74gr734rg4r234r",
+            "data": {}
+        }
+    ],
+    "session_id": "0x22223"
+}
+```
+## 返回如下:
+```json
+
+```
