--- a/docs/contract/后端接口入口.md
+++ b/docs/contract/后端接口入口.md
@@ -939,7 +939,19 @@ d:{"finishReason":"stop", "usage":{"promptTokens":100, "completionTokens":100}}
 ```
 ## 返回如下:
 ```json
-
+[
+    {
+        "success": true,
+        "promptedAction": [],
+        "data": {
+            "description": "你好，您提到的内容可能涉及敏感词汇，因此我们无法提供具体的回答。如果您有其他问题，请随时告知，我会很乐意为您提供帮助。",
+            "intent": "fallback"
+        },
+        "message": "ok",
+        "confidence": 99.9,
+        "alternatives": []
+    }
+]
 ```
 
 # Example-9: 语义不明确:
@@ -959,5 +971,17 @@ d:{"finishReason":"stop", "usage":{"promptTokens":100, "completionTokens":100}}
 ```
 ## 返回如下:
 ```json
-
+[
+    {
+        "success": true,
+        "promptedAction": [],
+        "data": {
+            "description": "你好，我注意到您提到的问题可能存在输入或格式上的错误，导致内容不够清晰。如果可以的话，请核实或提供更多信息，我会立即为您提供帮助。",
+            "intent": "fallback"
+        },
+        "message": "ok",
+        "confidence": 99.9,
+        "alternatives": []
+    }
+]
 ```
